--- a/Crowd Control/Pages/Dashboard.xaml
+++ b/Crowd Control/Pages/Dashboard.xaml
@@ -20,11 +20,15 @@
             </Grid.RowDefinitions>
             <ui:Card Grid.Row="0">
                 <DockPanel HorizontalAlignment="Left">
-                    <Image Width="80" Height="80" x:Name="Avatar"/>
+                    <Border CornerRadius="5" BorderThickness="4" BorderBrush="Gold">
+                        <Border BorderThickness="1" BorderBrush="Black">
+                            <Image Width="80" Height="80" x:Name="Avatar"/>
+                        </Border>
+                    </Border>
                     <TextBlock
                         x:Name="SteamName"
                         MinWidth="160"
-                        Padding="5,0"
+                        Padding="25,0"
                         Text="Steam Name"
                         FontSize="48"
                         TextAlignment="Center"
@@ -91,20 +95,18 @@
                         <ColumnDefinition Width="*"/>
                     </Grid.ColumnDefinitions>
                     <TextBlock Grid.Column="0" Text="Chat Reader" Foreground="White" VerticalAlignment="Center" FontSize="24" Margin="10"/>
-                    <ToggleButton x:Name="EnableReadChat" Grid.Column="1" Height="42" Width="100" VerticalAlignment="Center"
+                    
+                    <ToggleButton x:Name="EnableReadChat" Grid.Column="1" Height="42" Width="60" VerticalAlignment="Center"
                                   Background="Transparent"
                                   Margin="0" Checked="EnableChatReader" Unchecked="DisableChatReader">
-                        <!--
-                        <ToggleButton.Style>
-                            <Style TargetType="ToggleButton">
-                                <Style.Triggers>
-                                    <Trigger Property="IsChecked" Value="true">
-                                        <Setter Property="Background" Value="Transparent"/>
-                                    </Trigger>
-                                </Style.Triggers>
-                            </Style>
-                        </ToggleButton.Style-->
-                        <ui:SymbolIcon FontSize="30" HorizontalAlignment="Center" Symbol="ErrorCircle24" Foreground="Red"/>
+                        <Grid>
+                            <ui:SymbolIcon x:Name="GameConnectStatus" FontSize="30" Margin="3.25,-1.5" HorizontalAlignment="Center" Symbol="ErrorCircle24" Foreground="Red"/>
+                            <ui:ProgressRing Margin="-20" IsIndeterminate="True" Visibility="Collapsed" x:Name="GameConnectLoading">
+                                <ui:ProgressRing.RenderTransform>
+                                    <ScaleTransform ScaleX="0.42" ScaleY="0.42" CenterX="30.25" CenterY="30.75"/>
+                                </ui:ProgressRing.RenderTransform>
+                            </ui:ProgressRing>
+                        </Grid>
                     </ToggleButton>
                 </Grid>
                 <Grid Grid.Column="2">
@@ -146,19 +148,43 @@
                                HorizontalAlignment="Right" Content="X" Foreground="Red" FontSize="20" Width="40" Height="40" Background="{Binding}"/>
                 </Grid>
             </Grid>
-            <Border Grid.Row="3" BorderBrush="Gray" BorderThickness="2" CornerRadius="10,10,0,0" Background="#0CFFFFFF">
+            <Border Grid.Row="3" BorderBrush="Gray" BorderThickness="2" CornerRadius="10,10,0,0" Background="#FF0D0C0E">
                 <ScrollViewer 
                         HorizontalScrollBarVisibility="Disabled"
                         VerticalScrollBarVisibility="Visible"
                         Padding="0" PanningMode="VerticalOnly"
                         Background="White" Height="Auto">
                     <WrapPanel x:Name="CommandWrap">
-
+                        
                     </WrapPanel>
                 </ScrollViewer>
             </Border>
-            <!--<ui:Button Grid.Row="4" Content="TEST" Margin="0" VerticalAlignment="Bottom" HorizontalAlignment="Stretch" Width="Auto" Click="Button_Click"/>-->
-        </Grid>
+            <Grid Grid.Row="3" x:Name="MovingContainer">
+                
+            </Grid>
+            </Grid>
+        <ui:Card x:Name="MovingCardShadow" Margin="20,20,0,0" Visibility="Collapsed"
+                         VerticalAlignment="Top" HorizontalAlignment="Left"
+                         Background="#3F060606" MouseDown="Card_MouseDown" MouseUp="Card_MouseUp">
+            <Border Height="215" Width="270"  BorderThickness="5" Margin="0,1,0,0">
+                <Border.BorderBrush>
+                    <DrawingBrush Viewport="0,-1,25,24" ViewportUnits="Absolute" TileMode="Tile">
+                        <DrawingBrush.Drawing>
+                            <DrawingGroup>
+                                <GeometryDrawing Brush="Black">
+                                    <GeometryDrawing.Geometry>
+                                        <GeometryGroup>
+                                            <RectangleGeometry Rect="0,0,150,150" />
+                                            <RectangleGeometry Rect="150,150,150,150" />
+                                        </GeometryGroup>
+                                    </GeometryDrawing.Geometry>
+                                </GeometryDrawing>
+                            </DrawingGroup>
+                        </DrawingBrush.Drawing>
+                    </DrawingBrush>
+                </Border.BorderBrush>
+            </Border>
+        </ui:Card>
     </Grid>
 </ui:UiPage>
 <!--
